--- a/style.css
+++ b/style.css
@@ -364,3 +364,69 @@ section
     margin-top: 40px;
     font-size: 16px;
 }
+
+@media(max-width:1024px)
+{
+    #menu-icon
+    {
+        display: block;
+    }
+    .navbar
+    {
+        position: absolute;
+        top: 100%;
+        right: 0;
+        width: 50%;
+        padding: 1rem 3rem;
+        background-color: rgba(0, 0, 0, 0.8);
+        border-left: 2px solid var(--main-color);
+        border-bottom: 2px solid var(--main-color);
+        border-bottom-left-radius: 2rem;
+        display: none;
+    }
+    .navbar a
+    {
+        display: block;
+        font-size: 2rem;
+        margin: 3rem 0;
+        color: var(--text-color);
+    }
+    .navbar.active
+    {
+        display: block;
+    }
+    .home
+    {
+        flex-direction:column-reverse;
+        margin: 3rem 0;
+        gap: 5rem;
+    }
+    .home-content
+    {
+        align-items: center;
+        text-align: center;
+    }
+    .home-img img
+    {
+        width: 52vw;
+    }
+    .about
+    {
+        flex-direction: column-reverse;
+        text-align: center;
+    }
+    .about h2
+    {
+        text-align: center;
+        margin: 2rem 0;
+    }
+    .about img
+    {
+        width: 52vw;
+    }
+    .contact form
+    {
+        flex-direction: column;
+    }
+
+}
