--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ body
 {
     background: var(--bg-color);
     color: var(--text-color);
+    padding-top: 8rem;
 }
 .header
 {
@@ -87,6 +88,7 @@ section
     align-items: center;
     justify-content: center;
     gap: 15rem;
+    /*margin-top: 8rem;*/
 }
 .home-content
 {
@@ -429,4 +431,173 @@ section
         flex-direction: column;
     }
 
+}
+
+.projects {
+    padding: 5rem 12%;
+    background-color: var(--second-bg-color);
+    /*margin-top: 6rem;*/
+}
+
+.projects-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 2rem;
+    justify-items: center;
+}
+
+.project {
+    background-color: var(--bg-color);
+    border-radius: 10px;
+    overflow: hidden;
+    text-align: center;
+    padding: 1rem;
+    /*box-shadow: 0 0 20px rgba(0, 225, 255, 0.8);;*/
+}
+
+.project img {
+    width: 100%;
+    height: auto;
+    display: block;
+    
+}
+
+.project h3 {
+    font-size: 1.8rem;
+    margin: 1rem 0;
+}
+
+.project p {
+    font-size: 1.4rem;
+    margin: 0.5rem 0;
+}
+
+.project .btn {
+    margin-top: 1rem;
+    display: inline-block;
+}
+
+.btn {
+    display: inline-block;
+    padding: 1rem 3rem;
+    background: var(--main-color);
+    box-shadow: 0 0 15px rgba(0, 225, 255, 0.5); /* Reduzido brilho */
+    border-radius: 3rem;
+    font-size: 1.8rem;
+    color: black;
+    border: 2px solid transparent;
+    font-weight: 600;
+    transition: 0.3s ease-in-out;
+}
+
+.btn:hover {
+    transform: scale(1.05);
+    box-shadow: 0 0 10px rgba(0, 225, 255, 0.6), /* Reduzido brilho */
+                0 0 20px rgba(0, 225, 255, 0.4); /* Reduzido brilho */
+}
+
+.project-details {
+    padding: 5rem 12%;
+    background-color: var(--second-bg-color);
+    text-align: center;
+}
+
+.project-title {
+    font-size: 8rem;
+    margin-bottom: 2rem;
+}
+
+.project-description {
+    font-size: 2.0rem;
+    margin-bottom: 3rem;
+    line-height: 1.6;
+}
+
+.project-images {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 1rem;
+    margin-bottom: 3rem;
+}
+
+.project-images img {
+    width: 100%;
+    height: 200px; 
+    object-fit: cover;
+    border-radius: 10px;
+    box-shadow: 0 0 15px rgba(0, 225, 255, 0.3);
+}
+
+.project-images img:hover {
+    box-shadow: 0 0 25px rgba(0, 225, 255, 0.5);
+}
+
+.project-details .btn {
+    margin-top: 2rem;
+    display: inline-block;
+    padding: 1rem 3rem;
+    background: var(--main-color);
+    box-shadow: 0 0 15px rgba(0, 225, 255, 0.5);
+    border-radius: 3rem;
+    font-size: 1.8rem;
+    color: black;
+    border: 2px solid transparent;
+    font-weight: 600;
+    transition: 0.3s ease-in-out;
+}
+
+.project-details .btn:hover {
+    transform: scale(1.05);
+    box-shadow: 0 0 20px rgba(0, 225, 255, 0.6), 
+                0 0 30px rgba(0, 225, 255, 0.4);
+}
+
+.project-info {
+    margin: 2rem 0;
+    padding: 2rem;
+    background-color: var(--bg-color);
+    border-radius: 10px;
+    color: var(--text-color);
+    text-align: left;
+}
+
+.project-info h3 {
+    font-size: 2.5rem;
+    margin-bottom: 2.5rem;
+}
+
+.project-info ul {
+    list-style: none;
+    padding: 0;
+}
+
+.project-info ul li {
+    font-size: 2.0rem;
+    margin-bottom: 2rem;
+}
+
+.project-info ul li strong {
+    color: var(--main-color);
+}
+
+.project-info p {
+    font-size: 2.0rem;
+    margin-top: 1rem;
+}
+
+.project-video {
+    margin-top: 2rem;
+    text-align: center;
+}
+
+.project-video iframe {
+    width: 100%;
+    height: 600px;
+    border: none;
+    border-radius: 10px;
+    box-shadow: 0 0 15px rgba(0, 225, 255, 0.3);
+}
+
+.project-video iframe:hover {
+    box-shadow: 0 0 25px rgba(0, 225, 255, 0.5);
 }
