--- a/style.css
+++ b/style.css
@@ -488,6 +488,7 @@ section
     border: 2px solid transparent;
     font-weight: 600;
     transition: 0.3s ease-in-out;
+    cursor: pointer;
 }
 
 .btn:hover {
